--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,14 +7,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Run Gitleaks STRICT
-        shell: pwsh
+      - name: Download and run Gitleaks
         run: |
-          # Escaneo estricto sin archivo de configuración
-          ./gitleaks.exe detect --source . --verbose --no-git --exit-code 1
+          wget -q https://github.com/gitleaks/gitleaks/releases/download/v8.18.4/gitleaks_8.18.4_linux_x64.tar.gz
+          tar -xzf gitleaks_8.18.4_linux_x64.tar.gz
+          chmod +x gitleaks
           
-          # También escanea específicamente los .env
-          Get-ChildItem -Path . -Filter .env -Recurse | ForEach-Object {
-            Write-Host "Scanning: $($_.FullName)"
-            ./gitleaks.exe detect --source $_.FullName --verbose --no-git
-          }
+          # Escaneo estricto
+          ./gitleaks detect --source . --verbose --no-git
+          
+          # Escanear archivos .env específicamente
+          for envfile in $(find . -name "*.env" -o -name ".env"); do
+            echo "Checking: $envfile"
+            ./gitleaks detect --source "$envfile" --verbose --no-git || true
+          done
